In settings changed timezone to 'Asia/Kolkata'. In views added code to get the todo objects of the logged in user. In the html file added code to display the todo. Next is creating individual pages for each todo object and also adding the titles as links so as to click and go to that particular todo page

--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -3,5 +3,15 @@
 {% block content %}
 
 <h1>Current Todos</h1>
-
+<ul>
+<!--cycling through the todos of the user from the dictionary passed todos-->
+    {% for todo in todos %}
+        <li>
+<!--making the important todos bold-->
+            {% if todo.important %}<b>{% endif %}
+                {{ todo.title }}
+            {% if todo.important %}</b>{% endif %}
+        </li>
+    {% endfor %}
+</ul>
 {% endblock %}
