Successfully changed viewtodo to show only the logged in user's todos. We can now make changes and edit fields and save again and it will be updated, changes were also made in currenttodos to add the url viewtodo to each item. then changed views and urls to include viewtodo.more info in comments on the code

--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -3,15 +3,18 @@
 {% block content %}
 
 <h1>Current Todos</h1>
-<ul>
+<ul></ul>
 <!--cycling through the todos of the user from the dictionary passed todos-->
     {% for todo in todos %}
-        <li>
-<!--making the important todos bold-->
-            {% if todo.important %}<b>{% endif %}
-                {{ todo.title }}
-            {% if todo.important %}</b>{% endif %}
-        </li>
+    <!--adding links to the list object-->
+        <a href="{% url 'viewtodo' todo.id %}">
+            <li>
+                <!--making the important todos bold-->
+                {% if todo.important %}<b>{% endif %}
+                    {{ todo.title }}
+                {% if todo.important %}</b>{% endif %}
+            </li>
+        </a>
     {% endfor %}
 </ul>
 {% endblock %}
