updating and deleting todos. We define paths in the urls.py. then write the corresponding functions in view and instead of different templates, we just add forms with only button elements in the viewtodo html page. We can only access the urls created through these buttons as the condition in views.py is that the request should be a post request to access the urls. Otherwise if we type in we get 404 error.

--- a/todo/templates/todo/viewtodo.html
+++ b/todo/templates/todo/viewtodo.html
@@ -4,9 +4,20 @@
    <h4>{{ error_message }}</h4>
  {% endif %}
  {{ todo.title }}
+
  <form method="POST">
    {% csrf_token %}
    {{ form.as_p }}
-   <button type="submit"> Update! </button>
+   <button type="submit"> Update Todo! </button>
  </form>
- {% endblock %}
+
+ <form method="POST" action="{% url 'completetodo' todo.id %}">
+    {% csrf_token %}
+     <button type="submit"> Todo Completed! </button>
+ </form>
+
+ <form method="POST" action="{% url 'deletetodo' todo.id %}">
+     {% csrf_token %}
+     <button type="submit">Delete this todo!</button>
+ </form>
+{% endblock %}
